<resources>
    <string name="app_name">Consumhogar</string>
    <string name="ver_valores">Ver valores</string>
    <string name="ingresar_latitud">ingrese latitud</string>
    <string name="ingresar_longitud">ingrese longitud</string>
    <string name="enviar_valor">Enviar idcanal</string>
    <string name="longitude">longitud</string>
    <string name="latitude">latitud</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_item_detail">Detalle</string>
    <string name="dialog_borrar_dispositivo">¿Esta seguro de borrar el dispositivo?</string>
    <string name="delete">Borrar</string>
    <string name="cancel">Cancelar</string>
    <string name="saved_valor_consumo">key_cosnumo</string>
    <string name="action_sign_in_short">Iniciar sesion</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email         completions.</string>
    <string name="error_incorrect_password">usuario o contrasenia incorrecta</string>
    <string name="error_invalid_password">la contraseña es muy corta</string>
    <string name="error_field_required">el campo es requerido</string>
    <string name="error_invalid_user">el usuario es muy corto</string>
    <string name="login_btn">Iniciar Sesión</string>
    <string name="forget_password">Si olvidó la contraseña, llame al técnico por favor.</string>
    <string name="login_pass_hint">Contraseña</string>
    <string name="login_user_hint">Usuario</string>
    <string name="string_field">field</string>
    <string name="first">primero</string>
    <string name="last">ultimo</string>

</resources>
