<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.InicioSesionActivity">
    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_progress">

            <RelativeLayout
                android:id="@+id/login_header"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <ImageView
                    android:id="@+id/img_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fondo_inicio" />

                <TextView
                    android:id="@+id/tvTituloAplicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="CONSUMHOGAR"
                    android:textColor="@android:color/white"
                    android:shadowDx="@android:integer/config_longAnimTime"
                    android:shadowDy="@android:integer/config_longAnimTime"
                    android:shadowColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"/>

            </RelativeLayout>

            <LinearLayout
                android:gravity="center"
                android:id="@+id/email_login_form"
                android:layout_below="@+id/login_header"
                android:orientation="vertical"
                android:padding="@dimen/dimension_pequena"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_user_hint"
                        android:layout_marginBottom="@dimen/dimension_media"
                        android:inputType="textAutoComplete|textNoSuggestions"
                        android:maxLines="1"
                        android:text="consumhogar"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_pass_hint"
                        android:layout_marginBottom="@dimen/dimension_media"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:text="consumhogar" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnIniciarSesion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/holo_blue_light"
                    android:text="@string/login_btn"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="18sp"
                    android:layout_marginBottom="@dimen/dimension_media"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:text="@string/forget_password"
                    android:textSize="18sp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
